--- a/contact.html
+++ b/contact.html
@@ -82,10 +82,12 @@
                     <div class="form-group">
                         <label for="prenom" class="col-sm-2 control-label">Prénom</label>
                         <div class="col-sm-4">
-                            <input type="text" name="prenom" id="prenom" class="form-control" required title="Entrez votre prénom" placeholder="Votre prénom"> </div>
+                            <input type="text" name="prenom" id="prenom" class="form-control" required title="Entrez votre prénom" placeholder="Jean" pattern="[a-zA-Z àáâãäåÀÁÂèéêëÈÉÊËìíîïÌÍÎÏòóôõöøÒÓÔÕÖØùúûüÙÚÛÜÿçÇñÑ]{1,}">
+                        </div>
                         <label for="nom" class="col-sm-2 control-label">Nom</label>
                         <div class="col-sm-4">
-                            <input type="text" name="nom" id="nom" class="form-control" required title="Entrez votre nom de famille" placeholder="Votre nom de famille"> </div>
+                            <input type="text" name="nom" id="nom" class="form-control" required title="Entrez votre nom de famille" placeholder="Dupont" pattern="[a-zA-Z àáâãäåÀÁÂèéêëÈÉÊËìíîïÌÍÎÏòóôõöøÒÓÔÕÖØùúûüÙÚÛÜÿçÇñÑ]{1,}">
+                        </div>
                     </div>
                     <div class="form-group">
                         <label for="email" class="col-sm-2 control-label">E-mail</label>
@@ -93,7 +95,7 @@
                             <input type="email" name="email" id="email" class="form-control" required title="Entrez votre adresse mail" placeholder="adresse@example.com"> </div>
                         <label for="tel" class="col-sm-2 control-label">Téléphone</label>
                         <div class="col-sm-4">
-                            <input type="tel" name="tel" id="tel" class="form-control" required title="Entrez votre numéro de téléphone" placeholder="+33 X XX XX XX XX"> </div>
+                            <input type="tel" name="tel" id="tel" class="form-control" required title="Entrez votre numéro de téléphone" placeholder="XXXXXXXXXX" pattern="[0-9]{10}" maxlength="10"> </div>
                     </div>
                     <div class="form-group">
                         <div class="col-sm-12">
