--- a/parcours-professionnel.html
+++ b/parcours-professionnel.html
@@ -77,7 +77,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-xs-9">
                 <!-- DEBUT Contenu Onglets -->
                 <div class="tab-content">
                     <dl class="dl-horizontal tab-pane fade in active" id="etudes">
@@ -145,6 +145,9 @@
                         <dt>2016 - 2017</dt>
                         <dd><strong>Membre Ancien de l'Amicale Paris Sciences</strong></dd>
                     </dl>
+                </div>
+                <div class="col-xs-3">
+                    <img src="img/parcours-pro/hoche.jpg" alt="" class="img-responsive img-rounded" width="50">
                 </div>
                 <!-- FIN Conetnu Onglets -->
             </div>
